--- a/css/face.css
+++ b/css/face.css
@@ -1,10 +1,19 @@
 #face {
-    width: 6em;
-    height: 8em;
+    width: 9em;
+    height: 12em;
     background-color: oklch(75.29% 0.1209 43.41);
     border-radius: 3em;
-    position: relative;
     animation: 2s infinite alternate animatie-hoofd;
+    position: absolute;
+    top: 45%;
+    left: 10%;
+}
+
+@media (max-width: 800px) {
+    #face {
+        top: 0;
+        left: calc(50% - 9em * .5)
+    }
 }
 
 /* haar */
