--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,13 @@
 }
 
 main {
-    background-color: oklch(39.27% 0.1751 261.53);
+    background-image: linear-gradient(to right top in oklch,
+        oklch(52.35% 0.2121 354.71),
+        oklch(39.27% 0.1751 261.53)
+    );
     width: 100vw;
     height: 100vh;
+    position: relative;
 }
 
 section {
@@ -21,7 +25,7 @@ section {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: oklch(70% 0.1332 261.53);
+    background-color: oklch(100% 0 0 / 50%);
     overflow: hidden;
     display: grid;
 }
@@ -34,12 +38,59 @@ section article {
     padding: .5em;
 }
 
-.row-1 {
-    grid-row: 1;
+.row-1 {grid-row: 1;}
+.row-2 {grid-row: 2;}
+
+section article :is(h1, h2) {
+    font-size: 1.5em;
+    width: fit-content;
+    margin-bottom: .25em;
 }
 
-.row-2 {
-    grid-row: 2;
+section article :is(h1, h2)::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: .25em;
+    background-image: linear-gradient(to right in oklch,
+        oklch(52.35% 0.2121 354.71),
+        oklch(39.27% 0.1751 261.53)
+    );
+    border-radius: .125em;
+}
+
+section article ul {
+    padding: 0;
+}
+
+section article ul li {
+    list-style: none;
+    margin-left: .5em;
+    display: flex;
+    gap: .25em;
+    align-items: baseline;
+    transition: .5s;
+}
+
+section article ul li::before {
+    content: "";
+    display: inline-block;
+    min-width: .5em;
+    height: .5em;
+    background-image: linear-gradient(to right top in oklch,
+        oklch(52.35% 0.2121 354.71),
+        oklch(39.27% 0.1751 261.53)
+    );
+    transform: rotate(45deg);
+    transition: .5s;
+}
+
+section article ul li:hover {
+    margin-left: 1em;
+}
+
+section article ul li:hover::before {
+    transform: rotate(405deg);
 }
 
 @keyframes endOfWidthCards {
